--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"prisma": "^6.2.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-medium-image-zoom": "^5.2.13",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
 		"zustand": "^5.0.3"
