--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbopack",
-		"build": "NEXT_SKIP_ESLINT=1 next build",
+		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
@@ -44,7 +44,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"eslint": "^9",
+		"eslint": "^9.19.0",
 		"eslint-config-next": "15.1.3",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
